# shader-roy

./: .gitignore  Cargo.toml  README.md
example_raymarching/: Cargo.toml
example_raymarching/src/: example_raymarching.rs
examples/mandelbrot/: Cargo.toml  mandelbrot.rs
examples/raymarching_eyes/: Cargo.toml  raymarching_eyes.rs  sdf_utils.rs
examples/simple/: Cargo.toml  simple.rs
examples/two_dimensional_sdf/: Cargo.toml  two_dimensional_sdf.rs
main/: Cargo.toml
main/examples/: two2dsdf.rs
main/prelude_macros/: Cargo.toml
main/prelude_macros/prelude_proc_macros/: Cargo.toml
main/prelude_macros/prelude_proc_macros/src/: access.rs  lib.rs
main/prelude_macros/src/: lib.rs
main/src/: lib.rs  main.rs  msl_prelude.rs  parser.rs  prelude.rs  shader.metal  shader.rs  shader_compiler.rs  shader_prelude.metal  transpiler.rs
main/src/msl_prelude/: common.rs  generic.rs  geometric.rs  math.rs  types.rs
main/src/prelude/: construct.rs  geometric.rs  math.rs  mod.rs  types.rs
main/src/transpiler/: adapter.rs  parser.rs  printer.rs
metal_sl_prelude/: Cargo.toml
metal_sl_prelude/prelude_macros/prelude_proc_macros/src/: access.rs  construct.rs
metal_sl_prelude/prelude_macros/src/: lib.rs
metal_sl_prelude/src/: access.rs  common.rs  construct.rs  generic.rs  geometric.rs  graphics.rs  integer.rs  math.rs  matrix.rs  metal_sl_prelude.rs  relational.rs  types.rs
regex_try/: Cargo.toml
regex_try/src/: lib.rs
rust_to_metal_sl/: Cargo.toml
rust_to_metal_sl/src/: adapter.rs  enhancer.rs  printer.rs  rust_to_metal_sl.rs
shader_roy/: Cargo.toml
shader_roy/examples/: two2dsdf.rs
shader_roy/src/: main.rs  shader_compiler.rs  shader_file_path_arg.rs  shader_prelude.metal  shader_roy.rs
shader_roy_metal_sl_interface/: Cargo.toml
shader_roy_metal_sl_interface/src/: shader_roy_metal_sl_interface.rs
src/: main.rs  parser.rs  prelude.rs  shader.metal  shader.rs  shader_prelude.rs
