[package]
name = "metal-hot-reload"
version = "0.1.0"
authors = ["Michal Srb <xixixao@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metal = { git = "https://github.com/xixixao/metal-rs", branch = "fix-errors-new-library" }
objc = { version = "0.2.4", features = ["objc_exception"] }
winit = "0.24.0"
cocoa = "0.24.0"
syn = "1.0.58"
quote = "1.0.8"
anyhow = "1.0.38"