[package]
name = "rust_to_metal_sl"
version = "0.1.0"
authors = ["Michal Srb <xixixao@seznam.cz>"]
edition = "2018"

[lib]
path = "src/rust_to_metal_sl.rs"

[dependencies]
syn = { version = "1.0.58", features = ["full", "visit-mut"]}
quote = "1.0.8"
anyhow = "1.0.38"
proc-macro2 = "1.0.24"
lazy_static = "1.4.0"
regex = "1.4.3"
voca_rs = "1.13.0"
maplit = "1.0.2"
