[package]
name = "shader_roy"
version = "0.1.0"
authors = ["Michal Srb <xixixao@seznam.cz>"]
edition = "2018"

[dependencies]
rust_to_metal_sl = { path="../rust_to_metal_sl" }
metal = { git = "https://github.com/xixixao/metal-rs", branch = "fix-errors-new-library" }
objc = { version = "0.2.4", features = ["objc_exception"] }
winit = { git = "https://github.com/xixixao/winit", branch = "with_outer_position" }
regex_try = { path="../regex_try" }
cocoa = "0.24.0"
anyhow = "1.0.38"
vek = "0.13.0"
lazy_static = "1.4.0"
notify = "4.0.15"
toml = "0.5.8"
path-absolutize = "3.0.6"
regex = "1.4.3"
chrono = "0.4.19"